--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "quickswitch-client",
+  "name": "webview",
   "version": "0.0.0",
   "license": "MIT",
+  "author": "dede53",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,43 +12,50 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "bugs": {
+    "url": "https://github.com/dede53/qs-webview/issues"
+  },
+  "homepage": "https://github.com/dede53/qs-webview#readme",
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/material": "^2.0.0-beta.6",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+  },
+  "devDependencies": {
+    "@angular/animations": "^4.3.1",
+    "@angular/common": "^4.3.1",
+    "@angular/compiler": "^4.3.1",
+    "@angular/compiler-cli": "^4.3.3",
+    "@angular/core": "^4.3.1",
+    "@angular/forms": "^4.3.1",
+    "@angular/http": "^4.3.1",
+    "@angular/material": "^2.0.0-beta.8",
+    "@angular/platform-browser": "^4.3.1",
+    "@angular/platform-browser-dynamic": "^4.3.1",
+    "@angular/platform-server": "^4.3.3",
+    "@angular/router": "^4.3.1",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.28",
     "angular-material-icons": "^0.7.1",
+    "angular2-highcharts": "^0.5.5",
     "bootstrap": "^4.0.0-alpha.6",
     "core-js": "^2.4.1",
     "ng2-bootstrap": "^1.6.3",
-    "rxjs": "^5.1.0",
-    "socket.io-client": "^2.0.2",
-    "zone.js": "^0.8.4"
-  },
-  "devDependencies": {
-    "@angular/cli": "1.1.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/language-service": "^4.0.0",
+    "rxjs": "^5.4.2",
+    "socket.io-client": "^2.0.3",
+    "zone.js": "^0.8.14",
+    "@angular/cli": "^1.2.2",
+    "@angular/compiler-cli": "^4.3.1",
+    "@angular/language-service": "^4.3.1",
     "@types/jasmine": "2.5.45",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.85",
     "codelyzer": "~3.0.1",
-    "jasmine-core": "~2.6.2",
-    "jasmine-spec-reporter": "~4.1.0",
+    "jasmine-core": "^2.6.4",
+    "jasmine-spec-reporter": "^4.1.1",
     "karma": "~1.7.0",
     "karma-chrome-launcher": "~2.1.1",
     "karma-cli": "~1.0.1",
+    "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
     "protractor": "~5.1.2",
-    "ts-node": "~3.0.4",
+    "ts-node": "^3.2.1",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
   }
