--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -1,13 +1,23 @@
 {
-  "extends": "../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "../out-tsc/app",
-    "module": "es2015",
-    "baseUrl": "",
-    "types": []
-  },
-  "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
-  ]
+    "extends": "../tsconfig.json",
+    "compilerOptions": {
+        "outDir": "../out-tsc/app",
+        "module": "es2015",
+        "baseUrl": "",
+        "types": [
+            "node"
+        ],
+        // typeRoots option has been previously configured
+        "typeRoots": [
+            // add path to @types
+            "node_modules/@types"
+        ]
+    },
+    "exclude": [
+        "test.ts",
+        "**/*.spec.ts"
+    ],
+    "types": [
+        "node"
+    ]
 }
