--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types":[
+        "node"
+    ],
     "typeRoots": [
       "node_modules/@types"
     ],
@@ -16,5 +19,9 @@
       "es2016",
       "dom"
     ]
+      // ],
+    // "paths": {  
+    //     "highcharts": ["../node_modules/highcharts/highstock.js"]   
+    // }
   }
 }
